# tinyrenderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
model/: README.md
tinyrenderer/: camera.cpp  camera.hpp  linalg.cpp  linalg.hpp  main.cpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  triangle.cpp  triangle.hpp
tinyrenderer/math/: linalg.cpp  linalg.hpp  triangle.cpp  triangle.hpp
tinyrenderer/rendering/: camera.cpp  camera.hpp  draw.cpp  draw.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
